carbo/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-carbo-deployment-production
  namespace: carbo
spec:
  selector:
    matchLabels:
      app: mariadb-carbo-production
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb-carbo-production
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-carbo-storage-production
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-carbo-storage-production
          persistentVolumeClaim:
            claimName: mariadb-carbo-pvc-production
