carbo/next-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carbo-deployment-production
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: carbo-production
  template:
    metadata:
      labels:
        app: carbo-production
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: carbo-container-production
          image: ghcr.io/kaizerpwn/carbo-hackathon:93886f414d8873ccef0d5d41e23f5b3c26beacff
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
