carbo/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-carbo-production
  namespace: carbo
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-carbo-production
  clusterIP: None
