carbo/next-service.yml
apiVersion: v1
kind: Service
metadata:
  name: carbo-service-production
spec:
  type: LoadBalancer
  selector:
    app: carbo-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
