carbo/next-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: carbo-ingress-production
  namespace: carbo
spec:
  ingressClassName: public
  rules:
    - host: carbo.kaizerpwn.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carbo-service-production
                port:
                  number: 80
  tls:
    - hosts:
        - carbo.kaizerpwn.dev
      secretName: carbo-cert
